# trading-bot

./: README.md  example_env  pyproject.toml
src/trading_bot/: 01_tradingbot.py  __init__.py
